--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <h1>Concentration...But Sometimes The Cards Are On Fire</h1>
-        <!-- <div class="fire">
-            <img src="images/fire.png" alt="">
-        </div> -->
+    <div id="title">
+        <h1>Concentration...</h1>
+        <h2 id="but" class="invisible">But Sometimes A Card Bursts Into Flames</h2>
     </div>
-    <div id="app"></div>
+    <div>
+        <div id="app"></div>
+        <h2 id="buckets"></h2>
+    </div>
+    
 
 
     <!-- <a target="_blank" href="https://icons8.com/icons/set/chichen-itza--v1">Chichen Itza</a>, <a target="_blank" href="https://icons8.com/icons/set/washington-monument---v1">Washington Monument</a> and other icons by <a target="_blank" href="https://icons8.com">Icons8</a> -->
