--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Concentration...</h1>
         <h2 id="but" class="invisible">But Sometimes A Card Bursts Into Flames</h2>
     </div>
-    <div>
+    <div id="appCont">
         <div id="app"></div>
         <h2 id="buckets"></h2>
     </div>
