working on hydrant

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="title">
         <h1>Concentration...</h1>
         <h2 id="but" class="invisible">But Sometimes A Card Bursts Into Flames</h2>
+        <h2 id="end"></h2>
     </div>
     <div id="appCont">
         <div id="app"></div>
